modify debug in site.yml

--- a/devops/site.yml
+++ b/devops/site.yml
@@ -16,7 +16,7 @@
       register: output
 
     - name: debug
-      debug: msg= "Docker stdout: {{ output.stdout }}"
+      debug: msg= "Docker stdout:" {{ output.stdout }}
 - hosts: all
   become: true
   tags: ['build']
