--- a/devops/site.yml
+++ b/devops/site.yml
@@ -29,8 +29,8 @@
   become: true
   tags: ['deploy']
   tasks:
-    - name: down mariadb
-      command: systemctl stop mariadb
+#    - name: down mariadb
+#      command: systemctl stop mariadb
     - shell: echo "finished" >> /tmp/test2.txt
-    - name: Configure MariaDB
-      template: src=my.cnf.j2 dest=/etc/mysql/my.cnf
+#    - name: Configure MariaDB
+#      template: src=my.cnf.j2 dest=/etc/mysql/my.cnf
