added container name

--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   volumes:
    - "./.data/db:/var/lib/mysql"
   restart: always
+  container_name: teracd_wpdb
   environment:
    MYSQL_ROOT_PASSWORD: wordpress
    MYSQL_DATABASE: wordpress
@@ -20,6 +21,7 @@ services:
   ports:
    - "8000:80"
   restart: always
+  container_name: teracd_wp
   environment:
    WORDPRESS_DB_HOST: db:3306
    WORDPRESS_DB_PASSWORD: wordpress
