fixed site.yml path for another docker cp

--- a/devops/site.yml
+++ b/devops/site.yml
@@ -15,7 +15,7 @@
       docker_service: project_src=./devops build=yes
 
     - name: copy site.yml inside the wp container
-      command: docker cp site.yml teracd_wp:/tmp/site.yml
+      command: docker cp devops/site.yml teracd_wp:/tmp/site.yml
     
     - name: copy site.yml inside the wpdb container
       command: docker cp devops/site.yml teracd_wpdb:/tmp/site.yml
